Fix verified bugs and add API improvements across modules (#113)
## Summary
Fixes bugs from a review of the JVM modules (`dokimos-core` and the
adapters) and adds DX, behavior, and additive-API changes.

## Behavior changes
- Experiments isolate per-item failures: one throwing task/evaluator no
longer aborts the whole run (the item is recorded failed).
`Experiment.builder()` rejects an empty dataset or zero evaluators.
- CSV loading is RFC 4180 compliant (quoted commas/newlines, `""`
escapes, preserved whitespace, BOM).
- LLM judge replies tolerate prose around the JSON; `LLMJudge`
normalizes a custom `scoreRange` to 0..1; `ToolTrajectory` default now
compares arguments; the server reporter retries HTTP 429.

## New (additive) APIs
`Dataset.load(pathOrUri)`, `MeasuredTask`/`TaskResult` +
`Experiment.measuredTask`, `autoCloseReporter`, reporter
`getFailedItemCount()`/`onItemDeliveryFailure`/`spoolDirectory`, JUnit
`DatasetItemRecorder` + typed `@MetadataEntry`, Kotlin `evalCase` +
`ExampleDsl.metadata(Map)`, `LangChain4j.simpleTask(model, outputKey)`,
`AgentEvalCase`.

---------

Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>